news detail activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
 
         </activity>
 
+        <activity android:name=".ui.Activity.NewsDetailActivity"
+            android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
