--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fangxu.dota2helper">
+<manifest package="com.fangxu.dota2helper"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
         <activity
@@ -14,13 +14,18 @@
             android:screenOrientation="portrait">
 
             <intent-filter>
-                <category android:name="android.intent.category.LAUNCHER" />
-                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN"/>
             </intent-filter>
 
         </activity>
 
-        <activity android:name=".ui.Activity.NewsDetailActivity"
+        <activity
+            android:name=".ui.Activity.NewsDetailActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".ui.Activity.VideoDetailActivity"
             android:screenOrientation="portrait"/>
 
     </application>
