--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,48 +1,50 @@
 <manifest
-    package="com.fangxu.dota2helper"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.fangxu.dota2helper">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".MyApp"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
-        tools:replace="android:icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:replace="android:icon">
 
         <!-- youku ID-->
         <meta-data
             android:name="client_id"
-            android:value="0945caa01628b5c1"/>
+            android:value="0945caa01628b5c1" />
         <meta-data
             android:name="client_secret"
-            android:value="c9ede24c687c1e6c0678019ec5a600f6"/>
+            android:value="c9ede24c687c1e6c0678019ec5a600f6" />
 
         <activity
-            android:name=".ui.Activity.MainActivity"
+            android:name=".ui.Activity.SplashActivity"
             android:screenOrientation="portrait">
-
             <intent-filter>
-                <category android:name="android.intent.category.LAUNCHER"/>
-                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN" />
             </intent-filter>
-
         </activity>
 
         <activity
+            android:name=".ui.Activity.MainActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name=".ui.Activity.NewsDetailActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".ui.Activity.VideoPlayerActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"/>
+            android:configChanges="orientation|keyboardHidden|screenSize" />
 
     </application>
 
