--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
 
         <activity
             android:name=".ui.Activity.MainActivity"
+            android:theme="@style/AppTheme.NoneTranslucent"
             android:screenOrientation="portrait" />
 
         <activity
