--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,10 +42,12 @@
 
         <activity
             android:name=".ui.Activity.ArticalDetailActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop"/>
 
         <activity
             android:name=".ui.Activity.VideoPlayerActivity"
+            android:theme="@style/AppTheme.NoneTranslucent"
             android:configChanges="orientation|keyboardHidden|screenSize" />
 
         <activity android:name=".ui.Activity.ProfileActivity"
