--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
             android:theme="@style/AppTheme.NoneTranslucent"
             android:configChanges="orientation|keyboardHidden|screenSize"/>
 
-        <activity android:name=".ui.Activity.WatchedVideoActivity"
+        <activity android:name=".ui.Activity.WatchedVideoListActivity"
             android:screenOrientation="portrait"/>
 
         <activity android:name=".ui.Activity.ProfileActivity"
