--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,18 @@
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.fangxu.dota2helper">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
 
     <application
         android:name=".MyApp"
         android:allowBackup="true"
-        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
@@ -36,32 +37,53 @@
 
         <activity
             android:name=".ui.Activity.MainActivity"
-            android:theme="@style/AppTheme.NoneTranslucent"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden|screenSize"/>
+            android:theme="@style/AppTheme.NoneTranslucent" />
 
         <activity
             android:name=".ui.Activity.ArticalDetailActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop"/>
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".ui.Activity.VideoPlayerActivity"
-            android:theme="@style/AppTheme.NoneTranslucent"
-            android:configChanges="orientation|keyboardHidden|screenSize" />
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@style/AppTheme.NoneTranslucent" />
 
-        <activity android:name=".ui.Activity.NewsVideoActivity"
-            android:theme="@style/AppTheme.NoneTranslucent"
-            android:configChanges="orientation|keyboardHidden|screenSize"/>
+        <activity
+            android:name=".ui.Activity.NewsVideoActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@style/AppTheme.NoneTranslucent" />
 
-        <activity android:name=".ui.Activity.WatchedVideoListActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.Activity.WatchedVideoListActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".ui.Activity.ProfileActivity"
-                  android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.Activity.ProfileActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".ui.Activity.MyWebPageActivity"
-                  android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.Activity.MyWebPageActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.Activity.CachedVideoListActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.Activity.CachingVideoListActivity"
+            android:screenOrientation="portrait" />
+
+        <service
+            android:name="com.youku.service.download.DownloadService"
+            android:label="Youku Download Service"
+            android:process=":download" />
+
+        <service
+            android:name="com.youku.service.acc.AcceleraterService"
+            android:process=":accelerater" />
     </application>
 
 </manifest>
