--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
         }
     }
     sourceSets {
-        main{
+        main {
             java.srcDirs = ['src/main/java', 'src/main/java-gen']
         }
     }
@@ -54,6 +54,8 @@ dependencies {
     compile "io.reactivex:rxandroid:${rxjavaVersion}"
     compile "io.reactivex:rxjava:${rxjavaVersion}"
     compile "org.greenrobot:greendao:2.2.1"
+    compile 'com.wang.avi:library:1.0.5'
+    compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.flyco.banner:FlycoBanner_Lib:2.0.2@aar'
     compile 'com.timehop.stickyheadersrecyclerview:library:0.4.3'
