--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile "com.squareup.retrofit2:converter-scalars:${retrofit2Version}"
     compile "io.reactivex:rxandroid:${rxjavaVersion}"
     compile "io.reactivex:rxjava:${rxjavaVersion}"
+    compile 'com.umeng.analytics:analytics:latest.integration'
     compile "org.greenrobot:greendao:2.2.1"
     compile 'com.bigkoo:pickerview:2.1.0'
     compile 'com.wang.avi:library:1.0.5'
