--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     compile "io.reactivex:rxandroid:${rxjavaVersion}"
     compile "io.reactivex:rxjava:${rxjavaVersion}"
     compile 'com.umeng.analytics:analytics:latest.integration'
+    compile 'im.fir:fir-sdk:1.3.7@aar'
     compile "org.greenrobot:greendao:2.2.1"
     compile 'com.bigkoo:pickerview:2.1.0'
     compile 'com.wang.avi:library:1.0.5'
